--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <h1>Sukhdeb Das</h1>
+  <h1>MD. Golam Mostofa</h1>
  
 	<b>Lecturer</b><br>
 	<b>Information and Communication Technology</b><br>
