--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 	<b>Lecturer</b><br>
 	<b>Information and Communication Technology</b><br>
 	<b>RCBSC</b>
-  
+<ul>
+	<li>Item 1</li>
+	<li>Item 2</li>
+	<li>Item 3</li>
+	<li>Item 4</li>
+</ul>  
   <script src="script.js"></script>
 </body>
 </html>
